Refactor Utility methods and migrate to OkHttp